--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -47,26 +47,34 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+			<version>3.4.3</version>
+			
 		</dependency>
 
 		<dependency>
         	<groupId>org.mockito</groupId>
-        	<artifactId>mockito-core</artifactId>
-        	<version>4.0.0</version>
-        	<scope>test</scope>
+        	<artifactId>mockito-all</artifactId>
+        	<version>1.10.19</version>
+        	
+    	</dependency>
+	
+		<dependency>
+        	<groupId>org.mockito</groupId>
+        	<artifactId>mockito-junit-jupiter</artifactId>
+        	<version>5.15.2</version>
+
     	</dependency>
 		<dependency>
     		<groupId>org.junit.jupiter</groupId>
     		<artifactId>junit-jupiter-api</artifactId>
     		<version>5.7.1</version>
-    		<scope>test</scope>
+
 		</dependency>
 		<dependency>
    			<groupId>org.junit.jupiter</groupId>
     		<artifactId>junit-jupiter-engine</artifactId>
     		<version>5.7.1</version>
-    		<scope>test</scope>
+  
 		</dependency>
 	</dependencies>
 
