--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -67,15 +67,21 @@
 		<dependency>
     		<groupId>org.junit.jupiter</groupId>
     		<artifactId>junit-jupiter-api</artifactId>
-    		<version>5.7.1</version>
+    		<version>5.11.4</version>
 
 		</dependency>
 		<dependency>
    			<groupId>org.junit.jupiter</groupId>
     		<artifactId>junit-jupiter-engine</artifactId>
-    		<version>5.7.1</version>
-  
+    		<version>5.11.4</version>
 		</dependency>
+
+		<dependency>
+        	<groupId>org.junit.platform</groupId>
+        	<artifactId>junit-platform-launcher</artifactId>
+        	<version>1.11.4</version>
+        	<scope>test</scope>
+    	</dependency>
 	</dependencies>
 
 	<build>
@@ -83,6 +89,15 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		
+			<plugin>
+    			<groupId>org.apache.maven.plugins</groupId>
+    			<artifactId>maven-surefire-plugin</artifactId>
+    			<version>3.5.2</version>
+    			<configuration>
+        			<useJUnitPlatform>true</useJUnitPlatform>
+    			</configuration>
 			</plugin>
 		</plugins>
 	</build>
