--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -48,15 +48,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<version>3.4.3</version>
-			
 		</dependency>
-
-		<dependency>
-        	<groupId>org.mockito</groupId>
-        	<artifactId>mockito-all</artifactId>
-        	<version>1.10.19</version>
-        	
-    	</dependency>
 	
 		<dependency>
         	<groupId>org.mockito</groupId>
@@ -90,6 +82,16 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+            	<groupId>org.apache.maven.plugins</groupId>
+            	<artifactId>maven-surefire-plugin</artifactId>
+            	<version>3.5.2</version>
+            	<configuration>
+                	<dependenciesToScan>
+                    	<dependency>org.junit.jupiter:junit-jupiter-api</dependency>
+                	</dependenciesToScan>
+            	</configuration>
+       		</plugin>
 		
 		</plugins>
 	</build>
